--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,18 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    
+    <header>
+    <%= render 'layouts/header' %>
+    </header>
+    
+    <main>
     <%= yield %>
+    </main>
+    
+    <footer>
+    <%= render 'layouts/footer' %>
+    </footer>
+    
   </body>
 </html>
