--- a/app/views/user/songs/destroy.html.erb
+++ b/app/views/user/songs/destroy.html.erb
@@ -1,2 +1,8 @@
-<h1>User::Songs#destroy</h1>
-<p>Find me in app/views/user/songs/destroy.html.erb</p>
+楽曲を削除しました！
+
+また新しく曲を作ろう！
+
+
+<%= link_to new_song_path,class: 'nav-link text-secondary' do %>
+曲を作る
+<% end %>
