--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,18 +1,20 @@
-<footer class=" text-white pt-5 pb-4" style="background-color: #fde8e9;">
+<footer class=" text-white pt-5 pb-4" style="background-color: #C4DFDF;">
   <div class="container">
     <div class="row no-gutters">
       
       <div class="col-md-8">
-        <%#= image_tag('logo.png') %>
           <% if admin_signed_in? %> <!--adminログイン状態の際に、表示したいheaderのメニューを記載-->
-            <%= link_to admin_homes_top_path, class:'btn btn-outline-danger' do %>
+         
             管理者ログイン中
-            <% end %>
+          
           <% elsif user_signed_in? %> <!--userログイン状態の際に、表示したいheaderのメニューを記載-->
-            <%= link_to user_path(current_customer), class:'btn btn-outline-secondary' do %>
-              ようこそ、<%= current_user.name %>さん！
-            <% end %>
+            
+            ユーザーログイン中
+              
           <% else %><!--adminでもuserでもログインしていない時に表示するheaderのメニューを記載-->
+          
+          　ゲストユーザー
+          
           <% end %>
           </li>
         </ul>
