--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #fde8e9;">
+  <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #C4DFDF;">
     <div class="container">
       <!--<a class="navbar-brand" href="/"><%#= image_tag 'logo.png' , size: '200x40' %></a>-->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,34 +13,65 @@
 
       <li>
       <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-secondary' do %>
-      <i class="fas fa-sign-out-alt"></i> ログアウト
+      管理者ログアウト
       <% end %>
       </li>
-      
+
       <% elsif user_signed_in? %> <!--userログイン状態の際に、表示したいheaderのメニューを記載-->
-      
+
+      <%= link_to root_path,class: 'nav-link text-secondary' do %>
+      トップページ
+      <% end %>
+      </li>
+
+
+      <li>
+      <%= link_to new_song_path,class: 'nav-link text-secondary' do %>
+      曲を作る
+      <% end %>
+      </li>
+
+      <li>
+      <%= link_to songs_path,class: 'nav-link text-secondary' do %>
+      制作楽曲一覧
+      <% end %>
+      </li>
+
       <li>
       <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-secondary' do %>
-      <i class="fas fa-sign-out-alt"></i> Sign out
+      会員ログアウト
       <% end %>
       </li>
-      
+
       <% else %> <!--adminでもuserでもログインしていない時に表示するheaderのメニューを記載-->
-      
+
+
+      <li>
+      <%= link_to root_path,class: 'nav-link text-secondary' do %>
+      トップページ
+      <% end %>
+      </li>
+
+      <li>
+      <%= link_to about_path,class: 'nav-link text-secondary' do %>
+      アバウトページ
+      <% end %>
+      </li>
+
       <li>
       <%= link_to new_user_registration_path,class: 'nav-link text-secondary' do %>
-      <i class="fas fa-user-plus"></i> Sign up
+      会員登録
       <% end %>
       </li>
-      
+
       <li>
       <%= link_to new_user_session_path,class: 'nav-link text-secondary' do %>
-      <i class="fas fa-sign-in-alt"></i> Sign in
+      会員ログイン
       <% end %>
       </li>
-      
+
       <% end %>
-      
+
         </ul>
       </div>
     </div>
