--- a/app/views/user/songs/new.html.erb
+++ b/app/views/user/songs/new.html.erb
@@ -1,2 +1,34 @@
-<h1>User::Songs#new</h1>
-<p>Find me in app/views/user/songs/new.html.erb</p>
+
+<h1>楽曲投稿フォーム</h1>
+  <%= form_with model: @song do |f| %>
+  
+    <h4>曲名</h4>
+      <%= f.text_field :name %>
+      
+    <h4>アーティスト名</h4>
+      <%= f.text_field :artist %>
+      
+    <h4>チューニング</h4>
+      <%= f.text_field :tuning %>
+      
+    <h4>Capo位置</h4>
+      <%= f.text_field :capo %>
+      
+    <h4>BPM</h4>
+      <%= f.text_field :bpm %>
+      
+    <h4>主音</h4>
+      <%= f.text_field :tonic %>
+      
+    <h4>コード進行（歌詞含む）</h4>
+      <%= f.text_area :chord %>
+      
+    <h4>公開ステータス</h4>  
+    <%= f.radio_button :is_opened, false, checked:false %>非公開
+    <%= f.radio_button :is_opened, true %>公開
+    
+    <h4>合言葉　※ゲスト会員が公開楽曲を閲覧する際に使用します。</h4>
+    <%= f.text_field :secret_word %>
+      
+    <%= f.submit '投稿' %>
+  <% end %>
