レイアウト周り

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,8 @@
-<h1>トップページだよ〜</h1>
+
+
+<div class="nes-container with-title">
+  <p class="title">welcome to top page</p>
+  <p>Make a lot of songs!!</p>
+</div>
+
 
