不具合修正

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,8 +1,4 @@
+<p>Top page</p>
 
 
-<div class="nes-container with-title">
-  <p class="title">welcome to top page</p>
-  <p>Make a lot of songs!!</p>
-</div>
-
-
+<img src="/assets/top2.gif" alt="">
