--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,2 +1,14 @@
-<h1>User::Users#show</h1>
-<p>Find me in app/views/user/users/show.html.erb</p>
+<h1>user detail</h1>
+
+<table>
+  <tr>
+    <th>name :</th>
+    <td><%= current_user.name %></td>
+  </tr>
+  <tr>
+    <th>email:</th>
+    <td><%= current_user.email %></td>
+  </tr>
+</table>
+
+<%= link_to "Edit", edit_user_path(current_user)  %>
