コメント追加など

--- a/app/views/user/songs/index.html.erb
+++ b/app/views/user/songs/index.html.erb
@@ -14,6 +14,11 @@
     <th>status</th>
     <td><%= song.is_opened %></td>
   </tr>
+  
+  <!--<tr>-->
+  <!--  <th>status</th>-->
+  <!--  <td><%#= link_to "#{song.comments.count} コメント", song_path(song.id) %></td>-->
+  <!--</tr>-->
 </table>
 
 
