--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Chord Sharing</title>
+    <title>Be Chords</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,10 +11,10 @@
     <script src="https://kit.fontawesome.com/7dc7d3c10f.js" crossorigin="anonymous"></script> 
     <!--↑ fontawesome用 ↑-->
     
-    <!-- minify -->
-    <link href="https://unpkg.com/nes.css@0.0.2/css/nes.min.css" rel="stylesheet" />
-    <!-- latest -->
-    <link href="https://unpkg.com/nes.css/css/nes.min.css" rel="stylesheet" />
+     <!--minify -->
+    <!--<link href="https://unpkg.com/nes.css@0.0.2/css/nes.min.css" rel="stylesheet" />-->
+     <!--latest -->
+    <!--<link href="https://unpkg.com/nes.css/css/nes.min.css" rel="stylesheet" />-->
     
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -34,7 +34,7 @@
     <%= yield %>
     </main>
     
-    <footer>
+    <footer class="footer">
     <%= render 'layouts/footer' %>
     </footer>
     
