コメント削除機能

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,2 +1,11 @@
-<p>About page</p>
+<p class="text-center">
+<img src="/assets/about_logo.png" alt="">
+
+<h1>BeChordsとは</h1>
+<h3>作曲時に使えるメモツールアプリです。</h3>
+<h5>作曲に必要なコード進行や歌詞を保存しておくことが出来ます。</h5>
+<h5>自分のメモ用・演奏メンバーとの共有用・ライブでの閲覧用など様々な用途でお使いいただけます。</h5>
+
+</p>
+
 
