--- a/app/views/user/songs/index.html.erb
+++ b/app/views/user/songs/index.html.erb
@@ -1,24 +1,22 @@
 <h1>My songs</h1>
 
-
+<%= render 'user/searches/search' %>
 
 <div class="container">
 <div class="row">
+  
 <div class="col-6">
 <h1>非公開</h1>
 <% @close_songs.each do |song| %>
-
 <table border="3">
   <tr>
     <th>title</th>
     <td><%= link_to song_path(song.id) do %><%= song.name %><% end %></td>
-    
   </tr>
   <tr>
     <th>status</th>
     <td><%= song.is_opened %></td>
   </tr>
-  
   <tr>
     <th>comment</th>
     <td><%= link_to "#{song.comments.count} コメント", song_path(song.id) %></td>
@@ -26,10 +24,6 @@
 </table>
 <% end %>
 </div>
-
-
-
-
 
 <div class="col-6">
 <h1>公開</h1>
@@ -39,13 +33,11 @@
   <tr>
     <th>title</th>
     <td><%= link_to song_path(song.id) do %><%= song.name %><% end %></td>
-    
   </tr>
   <tr>
     <th>status</th>
     <td><%= song.is_opened %></td>
   </tr>
-  
   <tr>
     <th>status</th>
     <td><%= link_to "#{song.comments.count} コメント", song_path(song.id) %></td>
