--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,19 @@
  *= require_tree .
  *= require_self
  */
+
+@font-face {
+  font-family: "TanukiMagic";
+  src: asset-url('/fonts/TanukiMagic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.li {
+  font-family: 'M PLUS Rounded 1c';
+}
+
+.p {
+  font-family: 'M+PLUS+Rounded+1c';
+}
+
