--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,45 @@
-<p>Top page</p>
+<p class="text-center">
+<img src="/assets/about.png" alt="">
+</p>
+
+<p class="text-right">
+<%= link_to new_song_path,class: 'text-secondary' do %>合言葉お持ちの方はこちら>>︎<% end %>
+</p>
+
+ <% if admin_signed_in? %> <!--adminログイン状態の際に、表示したいheaderのメニューを記載-->
+      <li class="nav-item">
+      <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-secondary' do %>
+      管理者ログアウト
+      <% end %>
+      </li>
+
+      <% elsif user_signed_in? %> <!--userログイン状態の際に、表示したいheaderのメニューを記載-->
+      
+      <li class="nav-item">
+      <%= link_to new_song_path,class: 'nav-link' do %>
+      New song
+      <% end %>
+      </li>
+      
+      <li class="nav-item">
+      <%= link_to songs_path,class: 'nav-link' do %>
+      My songs
+      <% end %>
+      </li>
+      
+      <% else %> <!--adminでもuserでもログインしていない時に表示するheaderのメニューを記載-->
 
 
+      <li class="nav-item">
+      <%= link_to new_user_registration_path,class: 'nav-link' do %>
+      Sign up
+      <% end %>
+      </li>
 
+      <li class="nav-item">
+      <%= link_to new_user_session_path,class: 'nav-link' do %>
+      Sign in
+      <% end %>
+      </li>
+
+      <% end %>
