--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,13 @@
 
 
+<footer class="footer mt-auto py-3" style="background-color: #EEEEEE;">
+<div class="container">
 <% if admin_signed_in? %> <!--adminログイン状態の際に、表示したいheaderのメニューを記載-->
-<span class="nes-text is-primary">admin</span>
+<span class="nes-text is-primary">Admin</span>
 <% elsif user_signed_in? %> <!--userログイン状態の際に、表示したいheaderのメニューを記載-->
-<span class="nes-text is-primary">menber</span>
+<span class="nes-text is-primary">Menber</span>
 <% else %><!--adminでもuserでもログインしていない時に表示するheaderのメニューを記載-->
-<span class="nes-text is-primary">guest</span>
+<span class="nes-text is-primary">Guest</span>
 <% end %>
+</div>
+</footer>
