アドミンまわり土台作成

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,1 +1,16 @@
 @use '~bootstrap/scss/bootstrap';
+
+// @font-face {
+//   font-family: "TanukiMagic";
+//   src: asset-url('/fonts/TanukiMagic.ttf') format('truetype');
+//   font-weight: normal;
+//   font-style: normal;
+// }
+
+.li {
+  font-family: 'M PLUS Rounded 1c';
+}
+
+.p {
+  font-family: 'M+PLUS+Rounded+1c';
+}
