--- a/app/views/user/songs/index.html.erb
+++ b/app/views/user/songs/index.html.erb
@@ -1,6 +1,6 @@
 <h1>My songs</h1>
 
-<%= render 'user/searches/search' %>
+<%= render 'searches/search' %>
 
 <div class="container">
 <div class="row">
