--- a/app/views/user/songs/show.html.erb
+++ b/app/views/user/songs/show.html.erb
@@ -34,7 +34,7 @@
     <%= comment.user.name %>
     <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.name %><%= comment.comment %>
     <% if comment.user == current_user %>
-    <%= link_to "削除", song_comment_path(comment.song, @song), method: :delete %>
+    <%= link_to "削除", song_comment_path(comment.song, comment), method: :delete %>
     <% end %>
   <% end %>
 </div>
