--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,18 +14,19 @@
  *= require_self
  */
 
-@font-face {
-  font-family: "TanukiMagic";
-  src: asset-url('/fonts/TanukiMagic.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
+/*@font-face {*/
+/*  font-family: "TanukiMagic";*/
+/*  src: asset-url('/fonts/TanukiMagic.ttf') format('truetype');*/
+/*  font-weight: normal;*/
+/*  font-style: normal;*/
+/*}*/
 
-.li {
-  font-family: 'M PLUS Rounded 1c';
-}
+/*.li {*/
+/*  font-family: 'M PLUS Rounded 1c';*/
+/*  background: red;*/
+/*}*/
 
-.p {
-  font-family: 'M+PLUS+Rounded+1c';
-}
+/*.p {*/
+/*  font-family: 'M+PLUS+Rounded+1c';*/
+/*}*/
 
