--- a/app/views/admin/admins/index.html.erb
+++ b/app/views/admin/admins/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Admin::Admins#index</h1>
-<p>Find me in app/views/admin/admins/index.html.erb</p>
+ <% @user.each do |user| %>
+  <%= user.name %>
+  <%= user.is_deleted %>
+ <% end %>
