--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,2 +1,45 @@
-<h1>Admin::Genres#index</h1>
-<p>Find me in app/views/admin/genres/index.html.erb</p>
+<div class="container">
+  <div class="row justify-content-center my-3">
+    <h3 class="border-bottom border-gray">ジャンル一覧・追加</h3>
+  </div>
+
+  <!--新規登録-->
+  <div class="row justify-content-lg-center">
+      <div class="mx-auto">
+        <div class="col-lg-12">
+          <%= flash[:notice] %>
+          <%= form_with model: @genre, url: genres_path, method: :post, local: true do |f| %>
+
+            <div class="row">
+              <div class="col text-center ">
+                <%= f.label :ジャンル名 %>
+                <%= f.text_field :name %>
+                <%= f.submit '新規登録', class: "btn btn-success" %>
+                <% end %>
+              </div>
+            </div>
+        </div>
+      </div>
+  </div>
+
+  <!--ジャンル一覧-->
+  <div class="row pt-md-5">
+    <table class="table">
+      <thead class="thead-light">
+        <tr>
+          <th>ジャンル</th>
+          <th colspan="1"></th>
+        </tr>
+      </thead>
+  
+      <tbody>
+        <% @genres.each do |genre| %>
+        <tr>
+          <td class="align-middle"><%= genre.name %></td>
+          <td><%= link_to '編集する', edit_admin_genre_path(genre.id), class: "btn btn-success" %></td>
+          </tr>
+      </tbody>
+        <% end %>
+    </table>
+  </div>
+</div>
