--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,11 +14,23 @@
 
       <% if admin_signed_in? %> <!--adminログイン状態の際に、表示したいheaderのメニューを記載-->
       <li class="nav-item">
-      <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-secondary' do %>
-      管理者ログアウト
+      <%= link_to admins_path,class: 'nav-link' do %>
+      Member
       <% end %>
       </li>
-
+      
+      <li class="nav-item">
+      <%= link_to genres_path,class: 'nav-link' do %>
+      Genre
+      <% end %>
+      </li>
+      
+      <li class="nav-item">
+      <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-secondary' do %>
+      Log out
+      <% end %>
+      </li>
+      
       <% elsif user_signed_in? %> <!--userログイン状態の際に、表示したいheaderのメニューを記載-->
       
       <li class="nav-item">
