--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -12,7 +12,7 @@
 <!--adminでもuserでもログインしていない時に表示するheaderのメニューを記載-->
 
  <p class="text-right">
- <%= link_to new_song_path,class: 'text-secondary' do %>合言葉お持ちの方はこちら>>︎<% end %>
+ <%= link_to guest_search_path,class: 'text-secondary' do %>合言葉お持ちの方はこちら>>︎<% end %>
  </p>
 
  <% end %>
