--- a/app/views/admin/admins/index.html.erb
+++ b/app/views/admin/admins/index.html.erb
@@ -1,4 +1,30 @@
+
+ <table class='table table-hover table-inverse'>
+  <thead>
+   <tr>
+    <th>ID</th>
+    <th>名前</th>
+    <th>メールアドレス</th>
+    <th>退会ステータス</th>
+    <th>編集ボタン</th>
+   </tr>
+  </thead>
  <% @user.each do |user| %>
-  <%= user.name %>
-  <%= user.is_deleted %>
- <% end %>
+ <tbody>
+  <tr>
+  <td><%= user.id %></td>
+  <td><%= user.name %></td>
+  <td><%= user.email %></td>
+  <td>
+  <% if user.is_deleted == false %>
+  <b class="text-success">有効ユーザー</b>
+  <% else %>
+  <b class="text-secondary">退会ユーザー</b>
+  <% end %>
+  </td>
+  <td>
+  <%= link_to "会員情報を編集する", edit_admin_path(user.id)  %>
+  </td>
+  </tr>
+   <% end %>
+</table>
