--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -8,11 +8,10 @@
       <div class="mx-auto">
         <div class="col-lg-12">
           <%= flash[:notice] %>
-          <%= form_with model: @genre, url: genres_path, method: :post, local: true do |f| %>
-
             <div class="row">
               <div class="col text-center ">
-                <%= f.label :ジャンル名 %>
+                <%= form_with model: @genre, method: :post, local: true do |f| %>
+                <%= f.label :name, "ジャンル名" %>
                 <%= f.text_field :name %>
                 <%= f.submit '新規登録', class: "btn btn-success" %>
                 <% end %>
@@ -33,13 +32,13 @@
       </thead>
   
       <tbody>
-        <% @genres.each do |genre| %>
         <tr>
+        <% @genres.each do |genre| %>
           <td class="align-middle"><%= genre.name %></td>
-          <td><%= link_to '編集する', edit_admin_genre_path(genre.id), class: "btn btn-success" %></td>
-          </tr>
-      </tbody>
         <% end %>
+        </tr>
+      </tbody>
+        
     </table>
   </div>
 </div>
