--- a/app/views/user/songs/edit.html.erb
+++ b/app/views/user/songs/edit.html.erb
@@ -21,7 +21,7 @@
       <%= f.text_field :tonic %>
       
     <h4>chord&lyric</h4>
-      <%= f.text_area :chord %>
+      <%= f.text_area :chord ,size: "100x50" %>
       
     <h4>status</h4>  
     <%= f.radio_button :is_opened, false, checked:false %>close
