--- a/app/views/user/songs/index.html.erb
+++ b/app/views/user/songs/index.html.erb
@@ -1,6 +1,10 @@
-<h1>My songs</h1>
-
+<h6>合言葉検索</h6>
 <%= render 'searches/search' %>
+
+<br>
+
+<h1>投稿楽曲一覧</h1>
+
 
 <div class="container">
 <div class="row">
