--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -1,4 +1,4 @@
-<h2>Results index</h2>
+<h2>検索結果</h2>
 
 <table class="table table-hover table-inverse">
     <tbody>
@@ -6,6 +6,7 @@
         <tr>
           <td><%= song.name %></td>
           <td><%= song.artist %></td>
+          <td><%=link_to "詳細ページへ", song_path(song.id) %></td>
         </tr>
       <% end %>
     </tbody>
