トップページ・アバウトページの画像表示の修正

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,5 +1,5 @@
 <p class="text-center">
-<img src="/assets/about_logo.png" alt="">
+<%= image_tag 'about_logo.png' %>
 
 <div class="css_font">
 <h1>BeChordsとは</h1>
