--- a/app/views/user/shared/_links.html.erb
+++ b/app/views/user/shared/_links.html.erb
@@ -1,3 +1,4 @@
+<div class="css_font">
 <%- if controller_name != 'sessions' %>
   <%= link_to "Log in", new_session_path(resource_name) %><br />
 <% end %>
@@ -5,4 +6,4 @@
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <%= link_to "Sign up", new_registration_path(resource_name) %><br />
 <% end %>
-
+</div>
