--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,12 +1,10 @@
 <p class="text-center">
 <%= image_tag 'about_logo.png' %>
 
-<div class="css_font">
-<h1>BeChordsとは</h1>
-<h3>作曲時に使えるメモツールアプリです。</h3>
-<h5>作曲に必要なコード進行や歌詞を保存しておくことが出来ます。</h5>
-<h5>自分のメモ用・演奏メンバーとの共有用・ライブでの閲覧用など様々な用途でお使いいただけます。</h5>
-</div>
+<h1 class="css_font">BeChordsとは</h1>
+<h3 class="css_font">作曲時に使えるメモツールアプリです。</h3>
+<h5 class="css_font">作曲に必要なコード進行や歌詞を保存しておくことが出来ます。</h5>
+<h5 class="css_font">自分のメモ用・演奏メンバーとの共有用・ライブでの閲覧用など様々な用途でお使いいただけます。</h5>
 </p>
 
 
