--- a/app/views/searches/_search.html.erb
+++ b/app/views/searches/_search.html.erb
@@ -3,7 +3,7 @@
     <%= form_with url: search_path, local: true, method: :get do |f| %>
       <%= f.text_field :word %>
 
-      <%= f.submit "検索", class: "btn btn-primary" %>
+      <%= f.submit "検索", class: "btn btn-primary css_font" %>
     <% end %>
   </div>
 <%# end %>
