レイアウト整理

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -9,4 +9,10 @@
     font-family: 'Zen Kurenaido', sans-serif;
 }
 
+.css_backcolor1{
+    background-color:DDE6ED;
+}
 
+.css_backcolor2{
+    background-color:色指定;
+}
